--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -78,4 +78,4 @@ obj-$(CONFIG_QFP_FUSE) += qfp_fuse.o
 # LGE AT-CMD Bypass interface porting, myunghwan.kim@lge.com [START]
 obj-y += lge_tty_atcmd.o
 # LGE AT-CMD Bypass interface porting, myunghwan.kim@lge.com [END]
-
+obj-$(CONFIG_BLX)		+= blx.o
