--- a/arch/arm/configs/skernel_m4_nonfc_defconfig
+++ b/arch/arm/configs/skernel_m4_nonfc_defconfig
@@ -40,7 +40,7 @@ CONFIG_EXPERIMENTAL=y
 # CONFIG_BROKEN_ON_SMP is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-SKernel"
+CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -52,7 +52,7 @@ CONFIG_HAVE_KERNEL_LZ4=y
 # CONFIG_KERNEL_XZ is not set
 # CONFIG_KERNEL_LZO is not set
 CONFIG_KERNEL_LZ4=y
-CONFIG_DEFAULT_HOSTNAME="(none)"
+CONFIG_DEFAULT_HOSTNAME=""
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
@@ -120,8 +120,8 @@ CONFIG_RD_GZIP=y
 # CONFIG_CC_OPTIMIZE_DEFAULT is not set
 # CONFIG_CC_OPTIMIZE_ALOT is not set
 CONFIG_CC_OPTIMIZE_FAST=y
-# CONFIG_CCACHE is not set
-CONFIG_LINARO=y
+CONFIG_CCACHE=y
+# CONFIG_LINARO is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=2
@@ -377,6 +377,7 @@ CONFIG_MACH_MSM7X25A_V3=y
 # CONFIG_MACH_MSM7X25A_V3_DS is not set
 # CONFIG_MACH_MSM7X25A_V3_KK_WORKAROUD is not set
 CONFIG_LGE_BATTERY_SUSPEND_RESUME=y
+# CONFIG_BLX is not set
 # CONFIG_MACH_MSM8X25_U0 is not set
 # CONFIG_MACH_MSM8X25_HDK is not set
 # CONFIG_FB_MSM_MIPI_DSI_LG4573B_BOOT_LOGO is not set
@@ -469,8 +470,9 @@ CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=800000
-CONFIG_MSM_CPU_FREQ_MIN=61140
-CONFIG_MSM7X27A_OVERCLOCK=y
+CONFIG_MSM_CPU_FREQ_MIN=245760
+CONFIG_MSM7X27A_OVERCLOCK_PERFORMANCE=y
+CONFIG_MSM7X27A_OVERCLOCK_BALANCED=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_MSM_ADSP=y
@@ -1655,7 +1657,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 CONFIG_DEVMEM=y
 CONFIG_DEVKMEM=y
-CONFIG_FRANDOM=y
+# CONFIG_FRANDOM is not set
 
 #
 # Serial drivers
@@ -2951,6 +2953,8 @@ CONFIG_STAGING=y
 # CONFIG_USB_SERIAL_QUATECH_USB2 is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_DEBUG is not set
 CONFIG_ZCACHE=y
@@ -2991,8 +2995,6 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # Qualcomm Atheros Prima WLAN module Legacy
 #
 # CONFIG_PRIMA_WLAN_LEGACY is not set
-CONFIG_SNAPPY_COMPRESS=y
-CONFIG_SNAPPY_DECOMPRESS=y
 
 #
 # Qualcomm MSM specific device drivers
