--- a/arch/arm/configs/skernel_u0_nonfc_defconfig
+++ b/arch/arm/configs/skernel_u0_nonfc_defconfig
@@ -40,7 +40,7 @@ CONFIG_EXPERIMENTAL=y
 # CONFIG_BROKEN_ON_SMP is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-SKernel"
+CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -52,7 +52,7 @@ CONFIG_HAVE_KERNEL_LZ4=y
 # CONFIG_KERNEL_XZ is not set
 # CONFIG_KERNEL_LZO is not set
 CONFIG_KERNEL_LZ4=y
-CONFIG_DEFAULT_HOSTNAME="(none)"
+CONFIG_DEFAULT_HOSTNAME=""
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
@@ -120,8 +120,8 @@ CONFIG_RD_GZIP=y
 # CONFIG_CC_OPTIMIZE_DEFAULT is not set
 # CONFIG_CC_OPTIMIZE_ALOT is not set
 CONFIG_CC_OPTIMIZE_FAST=y
-# CONFIG_CCACHE is not set
-CONFIG_LINARO=y
+CONFIG_CCACHE=y
+# CONFIG_LINARO is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=2
@@ -466,9 +466,9 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=800000
-CONFIG_MSM_CPU_FREQ_MIN=61440
-CONFIG_MSM7X27A_OVERCLOCK=y
+CONFIG_MSM_CPU_FREQ_MAX=1008000
+CONFIG_MSM_CPU_FREQ_MIN=245760
+CONFIG_MSM7X27A_OVERCLOCK_PERFORMANCE=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_MSM_ADSP=y
@@ -1653,7 +1653,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 CONFIG_DEVMEM=y
 CONFIG_DEVKMEM=y
-CONFIG_FRANDOM=y
+# CONFIG_FRANDOM  is not set
 
 #
 # Serial drivers
@@ -2963,6 +2963,8 @@ CONFIG_STAGING=y
 # CONFIG_USB_SERIAL_QUATECH_USB2 is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_DEBUG is not set
 CONFIG_ZCACHE=y
@@ -3003,8 +3005,6 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # Qualcomm Atheros Prima WLAN module Legacy
 #
 # CONFIG_PRIMA_WLAN_LEGACY is not set
-CONFIG_SNAPPY_COMPRESS=y
-CONFIG_SNAPPY_DECOMPRESS=y
 
 #
 # Qualcomm MSM specific device drivers
