--- a/arch/arm/configs/skernel_m4_nonfc_defconfig
+++ b/arch/arm/configs/skernel_m4_nonfc_defconfig
@@ -377,7 +377,7 @@ CONFIG_MACH_MSM7X25A_V3=y
 # CONFIG_MACH_MSM7X25A_V3_DS is not set
 # CONFIG_MACH_MSM7X25A_V3_KK_WORKAROUD is not set
 CONFIG_LGE_BATTERY_SUSPEND_RESUME=y
-# CONFIG_BLX is not set
+CONFIG_BLX=y
 # CONFIG_MACH_MSM8X25_U0 is not set
 # CONFIG_MACH_MSM8X25_HDK is not set
 # CONFIG_FB_MSM_MIPI_DSI_LG4573B_BOOT_LOGO is not set
