--- a/arch/arm/configs/cyanogenmod_m4_nonfc_defconfig
+++ b/arch/arm/configs/cyanogenmod_m4_nonfc_defconfig
@@ -40,7 +40,7 @@ CONFIG_EXPERIMENTAL=y
 # CONFIG_BROKEN_ON_SMP is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-SKernel"
+CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -52,7 +52,7 @@ CONFIG_HAVE_KERNEL_LZ4=y
 # CONFIG_KERNEL_XZ is not set
 # CONFIG_KERNEL_LZO is not set
 CONFIG_KERNEL_LZ4=y
-CONFIG_DEFAULT_HOSTNAME="(none)"
+CONFIG_DEFAULT_HOSTNAME=""
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
@@ -117,10 +117,10 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
-# CONFIG_CC_OPTIMIZE_DEFAULT is not set
+CONFIG_CC_OPTIMIZE_DEFAULT=y
 # CONFIG_CC_OPTIMIZE_ALOT is not set
-CONFIG_CC_OPTIMIZE_FAST=y
-# CONFIG_CCACHE is not set
+# CONFIG_CC_OPTIMIZE_FAST is not set
+CONFIG_CCACHE=y
 CONFIG_LINARO=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -154,6 +154,7 @@ CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_COUNTERS is not set
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
+# CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
@@ -372,9 +373,11 @@ CONFIG_MACH_LGE=y
 #
 # LGE Board Selection
 #
-# CONFIG_MACH_MSM7X25A_V3 is not set
+CONFIG_MACH_MSM7X25A_V3=y
 # CONFIG_MACH_MSM7X25A_V3_DS is not set
+# CONFIG_MACH_MSM7X25A_V3_KK_WORKAROUD is not set
 CONFIG_LGE_BATTERY_SUSPEND_RESUME=y
+CONFIG_BLX=y
 # CONFIG_MACH_MSM8X25_U0 is not set
 # CONFIG_MACH_MSM8X25_HDK is not set
 # CONFIG_FB_MSM_MIPI_DSI_LG4573B_BOOT_LOGO is not set
@@ -382,9 +385,9 @@ CONFIG_LGE_POWER_ON_STATUS_PATCH=y
 # CONFIG_LGE_TOUCH_FOUR_BUTTON_SUPPORT is not set
 # CONFIG_LGE_TOUCH_POWER_USING_PMIC is not set
 # CONFIG_LGE_REBOOT_REASON_IN_EMMC is not set
-CONFIG_MACH_MSM7X27A_U0=y
-CONFIG_LGE_DETECT_USB_CABLE_TYPE=y
-# CONFIG_MACH_MSM7X25A_M4 is not set
+# CONFIG_MACH_MSM7X27A_U0 is not set
+# CONFIG_LGE_DETECT_USB_CABLE_TYPE is not set
+CONFIG_MACH_MSM7X25A_M4=y
 # CONFIG_MACH_MSM7X25A_V3BR_REV_B is not set
 # CONFIG_MACH_MSM7X25A_V3BR_REV_C is not set
 # CONFIG_MACH_MSM7X25A_V1 is not set
@@ -398,10 +401,10 @@ CONFIG_LGE_BOOT_MODE=y
 # CONFIG_LGE_BLOCKING_MONITOR is not set
 CONFIG_LGE_HW_REVISION=y
 # CONFIG_LGE_PM_BATT_ID_DETECTION is not set
-CONFIG_LGE_LCD_ESD_DETECTION=y
+# CONFIG_LGE_LCD_ESD_DETECTION is not set
 # CONFIG_LGE_UART_MODE is not set
-CONFIG_LGE_BOARD_HEADER_FILE="mach/lge/board_u0.h"
-CONFIG_LGE_BDI_TIMER_BUG_PATCH=y
+CONFIG_LGE_BOARD_HEADER_FILE="mach/lge/board_m4.h"
+# CONFIG_LGE_BDI_TIMER_BUG_PATCH is not set
 CONFIG_LGE_WAIT_FOR_EFS_SYNC_COMPLETE=y
 CONFIG_MACH_LGE_NO_DEBUG_INFO=y
 CONFIG_MACH_LGE_NO_STOCK_INFO=y
@@ -467,8 +470,9 @@ CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=800000
-CONFIG_MSM_CPU_FREQ_MIN=61440
-CONFIG_MSM7X27A_OVERCLOCK=y
+CONFIG_MSM_CPU_FREQ_MIN=245760
+CONFIG_MSM7X27A_OVERCLOCK_PERFORMANCE=y
+CONFIG_MSM7X27A_OVERCLOCK_BALANCED=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_MSM_ADSP=y
@@ -556,7 +560,7 @@ CONFIG_CPU_CP15_MMU=y
 # CONFIG_ARCH_PHYS_ADDR_T_64BIT is not set
 CONFIG_ARM_THUMB=y
 CONFIG_ARM_THUMBEE=y
-# CONFIG_SWP_EMULATE is not set
+CONFIG_SWP_EMULATE=y
 # CONFIG_CPU_ICACHE_DISABLE is not set
 # CONFIG_CPU_DCACHE_DISABLE is not set
 # CONFIG_CPU_BPREDICT_DISABLE is not set
@@ -684,36 +688,42 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_STAT_DETAILS=y
+CONFIG_CPU_FREQ_VDD_LEVELS=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ASSWAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_HYPER is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_DARKSIDE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASSH3 is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
-CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
-# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
+CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
+CONFIG_CPU_FREQ_GOV_ASSWAX=y
+CONFIG_CPU_FREQ_GOV_BADASS=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
+CONFIG_CPU_FREQ_GOV_HYPER=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
-CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
-CONFIG_CPU_FREQ_GOV_SMARTMAX=y
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
-CONFIG_CPU_FREQ_GOV_LAGFREE=y
-CONFIG_CPU_FREQ_GOV_INTELLIDEMAND2=y
-# CONFIG_CPU_FREQ_GOV_SAVAGEDZEN is not set
-# CONFIG_CPU_FREQ_GOV_DARKSIDE is not set
 CONFIG_CPU_FREQ_GOV_SMARTASSH3=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -1181,22 +1191,7 @@ CONFIG_RFKILL_PM=y
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
-CONFIG_NFC_DEVICES=y
-CONFIG_LGE_NFC=y
-CONFIG_LGE_NFC_PN544_C2=y
-# CONFIG_LGE_NFC_PN544_C3 is not set
-CONFIG_LGE_NFC_PRESTANDBY=y
-CONFIG_LGE_NFC_MULTICORE_FASTBOOT=y
-# CONFIG_LGE_NFC_DEBUG_MESSAGE is not set
-CONFIG_LGE_NFC_HW_QCT_MSM72X7A=y
-# CONFIG_LGE_NFC_HW_QCT_APQ8064 is not set
-# CONFIG_LGE_NFC_HW_QCT_MSM8960 is not set
-# CONFIG_LGE_NFC_HW_QCT_MSM8930 is not set
-# CONFIG_LGE_NFC_HW_QCT_MSM8660 is not set
-# CONFIG_LGE_NFC_HW_QCT_MSM8255 is not set
-# CONFIG_LGE_NFC_HW_TI_OMAP4430 is not set
-# CONFIG_LGE_NFC_HW_NV_AP3X is not set
-# CONFIG_LGE_NFC_SONY_CXD2235AGG is not set
+# CONFIG_NFC_DEVICES is not set
 
 #
 # Device Drivers
@@ -1596,12 +1591,12 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_MAX11801 is not set
 # CONFIG_TOUCHSCREEN_MCS5000 is not set
 # CONFIG_LGE_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
-CONFIG_TOUCHSCREEN_MELFAS_MMS136=y
+# CONFIG_TOUCHSCREEN_MELFAS_MMS136 is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MMS128S is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MMS128S_V1 is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MMS100S is not set
 # CONFIG_TOUCHSCREEN_MTOUCH is not set
-# CONFIG_TOUCHSCREEN_MELFAS_TS is not set
+CONFIG_TOUCHSCREEN_MELFAS_TS=y
 # CONFIG_TOUCHSCREEN_INEXIO is not set
 # CONFIG_TOUCHSCREEN_MK712 is not set
 # CONFIG_TOUCHSCREEN_PENMOUNT is not set
@@ -1668,7 +1663,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 CONFIG_DEVMEM=y
 CONFIG_DEVKMEM=y
-CONFIG_FRANDOM=y
+# CONFIG_FRANDOM is not set
 
 #
 # Serial drivers
@@ -1683,8 +1678,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_SERIAL_MSM=y
 CONFIG_SERIAL_MSM_CONSOLE=y
 CONFIG_SERIAL_MSM_HS=y
-CONFIG_SERIAL_MSM_CLOCK_CONTROL=y
-# CONFIG_SERIAL_MSM_RX_WAKEUP is not set
+# CONFIG_SERIAL_MSM_CLOCK_CONTROL is not set
 # CONFIG_SERIAL_MSM_HSL is not set
 # CONFIG_SERIAL_BCM_BT_LPM is not set
 # CONFIG_SERIAL_TIMBERDALE is not set
@@ -1857,7 +1851,7 @@ CONFIG_BATTERY_MSM=y
 # CONFIG_BATTERY_BQ27541 is not set
 # CONFIG_LTC4088_CHARGER is not set
 # CONFIG_CHARGER_SMB347 is not set
-# CONFIG_LGE_BATTERY_TEMP is not set
+CONFIG_LGE_BATTERY_TEMP=y
 CONFIG_LGE_FUEL_GAUGE=y
 # CONFIG_LGE_CHARGER_TYPE_DETECTION is not set
 # CONFIG_LGE_LOW_VOLTAGE_BATTERY_CHECK is not set
@@ -1920,7 +1914,7 @@ CONFIG_HWMON=y
 # CONFIG_SENSORS_MAX6650 is not set
 # CONFIG_SENSORS_MCP3021 is not set
 # CONFIG_SENSORS_NTC_THERMISTOR is not set
-# CONFIG_SENSORS_MSM_ADC is not set
+CONFIG_SENSORS_MSM_ADC=y
 # CONFIG_SENSORS_PC87360 is not set
 # CONFIG_SENSORS_PC87427 is not set
 # CONFIG_SENSORS_PCF8591 is not set
@@ -2056,20 +2050,7 @@ CONFIG_VIDEO_MEDIA=y
 #
 # CONFIG_RC_CORE is not set
 # CONFIG_MEDIA_ATTACH is not set
-CONFIG_MEDIA_TUNER=y
-# CONFIG_MEDIA_TUNER_CUSTOMISE is not set
-CONFIG_MEDIA_TUNER_SIMPLE=y
-CONFIG_MEDIA_TUNER_TDA8290=y
-CONFIG_MEDIA_TUNER_TDA827X=y
-CONFIG_MEDIA_TUNER_TDA18271=y
-CONFIG_MEDIA_TUNER_TDA9887=y
-CONFIG_MEDIA_TUNER_TEA5761=y
-CONFIG_MEDIA_TUNER_TEA5767=y
-CONFIG_MEDIA_TUNER_MT20XX=y
-CONFIG_MEDIA_TUNER_XC2028=y
-CONFIG_MEDIA_TUNER_XC5000=y
-CONFIG_MEDIA_TUNER_XC4000=y
-CONFIG_MEDIA_TUNER_MC44S803=y
+# CONFIG_MEDIA_TUNER is not set
 CONFIG_VIDEO_V4L2=y
 CONFIG_VIDEOBUF2_CORE=y
 CONFIG_VIDEOBUF2_MEMOPS=y
@@ -2219,7 +2200,7 @@ CONFIG_MSM_CAMERA_V4L2=y
 # CONFIG_HI351 is not set
 CONFIG_HI542=y
 CONFIG_HI542_ACT=y
-CONFIG_MT9V113=y
+# CONFIG_MT9V113 is not set
 # CONFIG_OV5647 is not set
 # CONFIG_WEBCAM_OV7692_QRD is not set
 # CONFIG_MT9M114 is not set
@@ -2342,10 +2323,10 @@ CONFIG_FB_MSM_MIPI_DSI=y
 # CONFIG_FB_MSM_LCDC_PANEL is not set
 # CONFIG_FB_MSM_MIPI_DSI_TOSHIBA is not set
 # CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
-# CONFIG_FB_MSM_MIPI_DSI_ILI9486 is not set
+CONFIG_FB_MSM_MIPI_DSI_ILI9486=y
 # CONFIG_FB_MSM_MIPI_DSI_SIMULATOR is not set
 # CONFIG_FB_MSM_MIPI_DSI_NOVATEK is not set
-CONFIG_FB_MSM_MIPI_DSI_LG4573B=y
+# CONFIG_FB_MSM_MIPI_DSI_LG4573B is not set
 # CONFIG_FB_MSM_MIPI_DSI_HX8379A is not set
 # CONFIG_FB_MSM_MIPI_DSI_ORISE is not set
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
@@ -2373,7 +2354,7 @@ CONFIG_FB_MSM_MIPI_DSI_LG4573B=y
 # CONFIG_FB_MSM_MIPI_ORISE_VIDEO_720P_PT is not set
 # CONFIG_FB_MSM_MIPI_ORISE_CMD_720P_PT is not set
 # CONFIG_FB_MSM_MIPI_ILI9486_VIDEO_HVGA_PT is not set
-# CONFIG_FB_MSM_MIPI_ILI9486_CMD_HVGA_PT is not set
+CONFIG_FB_MSM_MIPI_ILI9486_CMD_HVGA_PT=y
 # CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT is not set
@@ -2383,7 +2364,7 @@ CONFIG_FB_MSM_MIPI_DSI_LG4573B=y
 # CONFIG_FB_MSM_MIPI_CHIMEI_WXGA is not set
 # CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
-CONFIG_FB_MSM_MIPI_LG4573B_VIDEO_WVGA_PT=y
+# CONFIG_FB_MSM_MIPI_LG4573B_VIDEO_WVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_HX8379A_VIDEO_WVGA_PT is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA_PANEL is not set
@@ -2416,7 +2397,7 @@ CONFIG_FB_MSM_MIPI_LG4573B_VIDEO_WVGA_PT=y
 # CONFIG_FB_MSM_MIPI_ORISE_VIDEO_720P_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_ORISE_CMD_720P_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_ILI9486_VIDEO_HVGA_PT_PANEL is not set
-# CONFIG_FB_MSM_MIPI_ILI9486_CMD_HVGA_PT_PANEL is not set
+CONFIG_FB_MSM_MIPI_ILI9486_CMD_HVGA_PT_PANEL=y
 # CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_CHIMEI_WXGA_PANEL is not set
@@ -2427,7 +2408,7 @@ CONFIG_FB_MSM_MIPI_LG4573B_VIDEO_WVGA_PT=y
 # CONFIG_FB_MSM_MIPI_NT35516_VIDEO_QHD_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_NT35516_CMD_QHD_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO_PANEL is not set
-CONFIG_FB_MSM_MIPI_LG4573B_VIDEO_WVGA_PT_PANEL=y
+# CONFIG_FB_MSM_MIPI_LG4573B_VIDEO_WVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_EBI2_TMD_QVGA_EPSON_QCIF is not set
 # CONFIG_FB_MSM_EBI2_TOVIS_QVGA is not set
 # CONFIG_FB_MSM_PANEL_NONE is not set
@@ -2880,7 +2861,7 @@ CONFIG_AS3647=y
 #
 CONFIG_SWITCH=y
 CONFIG_SWITCH_GPIO=y
-CONFIG_LGE_SWITCH_GPIO=y
+# CONFIG_LGE_SWITCH_GPIO is not set
 # CONFIG_LGE_HEADSET_DETECTION_FSA8008 is not set
 # CONFIG_ACCESSIBILITY is not set
 CONFIG_RTC_LIB=y
@@ -2978,6 +2959,8 @@ CONFIG_STAGING=y
 # CONFIG_USB_SERIAL_QUATECH_USB2 is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_DEBUG is not set
 CONFIG_ZCACHE=y
@@ -3018,8 +3001,6 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # Qualcomm Atheros Prima WLAN module Legacy
 #
 # CONFIG_PRIMA_WLAN_LEGACY is not set
-CONFIG_SNAPPY_COMPRESS=y
-CONFIG_SNAPPY_DECOMPRESS=y
 
 #
 # Qualcomm MSM specific device drivers
@@ -3471,6 +3452,7 @@ CONFIG_NLATTR=y
 #
 # LGE Factory Feature
 #
+# CONFIG_LGE_FACTORY is not set
 CONFIG_LGE_SUPPORT_RAPI=y
-CONFIG_LGE_EMMC_DIRECT_ACCESS=y
-CONFIG_LGE_FW_HELPER=y
+# CONFIG_LGE_EMMC_DIRECT_ACCESS is not set
+# CONFIG_LGE_FW_HELPER is not set
