--- a/arch/arm/configs/cyanogenmod_u0_nonfc_defconfig
+++ b/arch/arm/configs/cyanogenmod_u0_nonfc_defconfig
@@ -117,11 +117,11 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
-# CONFIG_CC_OPTIMIZE_DEFAULT is not set
+CONFIG_CC_OPTIMIZE_DEFAULT=y
 # CONFIG_CC_OPTIMIZE_ALOT is not set
-CONFIG_CC_OPTIMIZE_FAST=y
+# CONFIG_CC_OPTIMIZE_FAST is not set
 CONFIG_CCACHE=y
-# CONFIG_LINARO is not set
+CONFIG_LINARO=yz
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=2
@@ -470,6 +470,7 @@ CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1008000
 CONFIG_MSM_CPU_FREQ_MIN=245760
 CONFIG_MSM7X27A_OVERCLOCK_PERFORMANCE=y
+# CONFIG_MSM7X27A_OVERCLOCK_BALANCED is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_MSM_ADSP=y
@@ -686,36 +687,41 @@ CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_STAT_DETAILS=y
 CONFIG_CPU_FREQ_VDD_LEVELS=y 
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ASSWAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_HYPER is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_DARKSIDE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASSH3 is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
-CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
-# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
+CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
+CONFIG_CPU_FREQ_GOV_ASSWAX=y
+CONFIG_CPU_FREQ_GOV_BADASS=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
+CONFIG_CPU_FREQ_GOV_HYPER=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
-CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
-CONFIG_CPU_FREQ_GOV_SMARTMAX=y
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
-CONFIG_CPU_FREQ_GOV_LAGFREE=y
-CONFIG_CPU_FREQ_GOV_INTELLIDEMAND2=y
-# CONFIG_CPU_FREQ_GOV_SAVAGEDZEN is not set
-# CONFIG_CPU_FREQ_GOV_DARKSIDE is not set
 CONFIG_CPU_FREQ_GOV_SMARTASSH3=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 
 #
 # ARM CPU frequency scaling drivers
