cyanogenmod_u0_nonfc_defconfig: fix error type

--- a/arch/arm/configs/cyanogenmod_u0_nonfc_defconfig
+++ b/arch/arm/configs/cyanogenmod_u0_nonfc_defconfig
@@ -121,7 +121,7 @@ CONFIG_CC_OPTIMIZE_DEFAULT=y
 # CONFIG_CC_OPTIMIZE_ALOT is not set
 # CONFIG_CC_OPTIMIZE_FAST is not set
 CONFIG_CCACHE=y
-CONFIG_LINARO=yz
+CONFIG_LINARO=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=2
